-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 8-shenandoah, 11-shenandoah, 14, 15
-
Component/s: hotspot
-
b24
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8246530 | 14u-cpu | Roland Westrelin | P4 | Resolved | Fixed | master |
| JDK-8246090 | 14.0.2 | Roland Westrelin | P4 | Resolved | Fixed | b09 |
$ cd test/hotspot/jtreg/testlibrary/ctw
$ make
$ cd dist
$ wget https://cr.openjdk.java.net/~shade/8244721/neo4j-primitive-collections-3.4.7.jar
$ JAVA_OPTIONS="-XX:+UnlockExperimentalVMOptions -XX:+UseShenandoahGC -XX:+ShenandoahVerifyOptoBarriers" ./ctw.sh neo4j-primitive-collections-3.4.7.jar
# Internal Error (/home/shade/trunks/jdk-jdk/src/hotspot/share/gc/shenandoah/c2/shenandoahSupport.cpp:2048), pid=9094, tid=9124
# assert(head->is_Region() && head->req() == 3) failed: unexpected infinite loop graph shape
#
# JRE version: OpenJDK Runtime Environment (15.0) (fastdebug build 15-internal+0-adhoc.shade.jdk-jdk)
# Java VM: OpenJDK 64-Bit Server VM (fastdebug 15-internal+0-adhoc.shade.jdk-jdk, mixed mode, sharing, tiered, compressed oops, shenandoah gc, linux-amd64)
# Problematic frame:
# V [libjvm.so+0x151029a] MemoryGraphFixer::collect_memory_nodes()+0x19ca
Current thread (0x00007f8964003800): JavaThread "C2 CompilerThread1" daemon [_thread_in_native, id=9124, stack(0x00007f89b5873000,0x00007f89b5974000)]
Current CompileTask:
C2: 3456 2952 b 4 org.neo4j.concurrent.BinaryLatch::isReleased (68 bytes)
Stack: [0x00007f89b5873000,0x00007f89b5974000], sp=0x00007f89b596d6f0, free space=1001k
Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.so+0x151029a] MemoryGraphFixer::collect_memory_nodes()+0x19ca
V [libjvm.so+0x1511fcb] ShenandoahBarrierC2Support::pin_and_expand(PhaseIdealLoop*)+0x66b
V [libjvm.so+0x145166f] ShenandoahBarrierSetC2::optimize_loops(PhaseIdealLoop*, LoopOptsMode, VectorSet&, Node_Stack&, Node_List&) const+0xaf
V [libjvm.so+0x1070293] PhaseIdealLoop::build_and_optimize(LoopOptsMode)+0xb53
V [libjvm.so+0x15097d6] ShenandoahBarrierC2Support::expand(Compile*, PhaseIterGVN&)+0x266
V [libjvm.so+0x14514cf] ShenandoahBarrierSetC2::expand_barriers(Compile*, PhaseIterGVN&) const+0xf
V [libjvm.so+0x862c5c] Compile::Optimize()+0xcdc
V [libjvm.so+0x863c98] Compile::Compile(ciEnv*, ciMethod*, int, bool, bool, bool, DirectiveSet*)+0xd78
V [libjvm.so+0x6d58dc] C2Compiler::compile_method(ciEnv*, ciMethod*, int, DirectiveSet*)+0xfc
V [libjvm.so+0x86ef8b] CompileBroker::invoke_compiler_on_method(CompileTask*)+0x2db
V [libjvm.so+0x86ffc8] CompileBroker::compiler_thread_loop()+0x538
V [libjvm.so+0x166d706] JavaThread::thread_main_inner()+0x206
V [libjvm.so+0x1672566] Thread::call_run()+0xf6
V [libjvm.so+0x129c03e] thread_native_entry(Thread*)+0x10e
Logs:
https://cr.openjdk.java.net/~shade/8244721/hs_err_pid9094.log
https://cr.openjdk.java.net/~shade/8244721/replay_pid9094.log
$ make
$ cd dist
$ wget https://cr.openjdk.java.net/~shade/8244721/neo4j-primitive-collections-3.4.7.jar
$ JAVA_OPTIONS="-XX:+UnlockExperimentalVMOptions -XX:+UseShenandoahGC -XX:+ShenandoahVerifyOptoBarriers" ./ctw.sh neo4j-primitive-collections-3.4.7.jar
# Internal Error (/home/shade/trunks/jdk-jdk/src/hotspot/share/gc/shenandoah/c2/shenandoahSupport.cpp:2048), pid=9094, tid=9124
# assert(head->is_Region() && head->req() == 3) failed: unexpected infinite loop graph shape
#
# JRE version: OpenJDK Runtime Environment (15.0) (fastdebug build 15-internal+0-adhoc.shade.jdk-jdk)
# Java VM: OpenJDK 64-Bit Server VM (fastdebug 15-internal+0-adhoc.shade.jdk-jdk, mixed mode, sharing, tiered, compressed oops, shenandoah gc, linux-amd64)
# Problematic frame:
# V [libjvm.so+0x151029a] MemoryGraphFixer::collect_memory_nodes()+0x19ca
Current thread (0x00007f8964003800): JavaThread "C2 CompilerThread1" daemon [_thread_in_native, id=9124, stack(0x00007f89b5873000,0x00007f89b5974000)]
Current CompileTask:
C2: 3456 2952 b 4 org.neo4j.concurrent.BinaryLatch::isReleased (68 bytes)
Stack: [0x00007f89b5873000,0x00007f89b5974000], sp=0x00007f89b596d6f0, free space=1001k
Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.so+0x151029a] MemoryGraphFixer::collect_memory_nodes()+0x19ca
V [libjvm.so+0x1511fcb] ShenandoahBarrierC2Support::pin_and_expand(PhaseIdealLoop*)+0x66b
V [libjvm.so+0x145166f] ShenandoahBarrierSetC2::optimize_loops(PhaseIdealLoop*, LoopOptsMode, VectorSet&, Node_Stack&, Node_List&) const+0xaf
V [libjvm.so+0x1070293] PhaseIdealLoop::build_and_optimize(LoopOptsMode)+0xb53
V [libjvm.so+0x15097d6] ShenandoahBarrierC2Support::expand(Compile*, PhaseIterGVN&)+0x266
V [libjvm.so+0x14514cf] ShenandoahBarrierSetC2::expand_barriers(Compile*, PhaseIterGVN&) const+0xf
V [libjvm.so+0x862c5c] Compile::Optimize()+0xcdc
V [libjvm.so+0x863c98] Compile::Compile(ciEnv*, ciMethod*, int, bool, bool, bool, DirectiveSet*)+0xd78
V [libjvm.so+0x6d58dc] C2Compiler::compile_method(ciEnv*, ciMethod*, int, DirectiveSet*)+0xfc
V [libjvm.so+0x86ef8b] CompileBroker::invoke_compiler_on_method(CompileTask*)+0x2db
V [libjvm.so+0x86ffc8] CompileBroker::compiler_thread_loop()+0x538
V [libjvm.so+0x166d706] JavaThread::thread_main_inner()+0x206
V [libjvm.so+0x1672566] Thread::call_run()+0xf6
V [libjvm.so+0x129c03e] thread_native_entry(Thread*)+0x10e
Logs:
https://cr.openjdk.java.net/~shade/8244721/hs_err_pid9094.log
https://cr.openjdk.java.net/~shade/8244721/replay_pid9094.log
- backported by
-
JDK-8246090 CTW: C2 (Shenandoah) compilation fails with "unexpected infinite loop graph shape"
-
- Resolved
-
-
JDK-8246530 CTW: C2 (Shenandoah) compilation fails with "unexpected infinite loop graph shape"
-
- Resolved
-