8244721: CTW: C2 (Shenandoah) compilation fails with "unexpected infinite loop graph shape"

Reviewed-by: shade